--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -992,107 +992,107 @@ stories:
   domain: http://www.heraldnet.com/navy/
   link: http://www.heraldnet.com/sports/mariners-top-picks-kirby-williamson-to-debut-in-everett/
 images:
-- name: castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
-- name: school-clouds-church-clouds-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colored-circuits.jpg
-- name: art-museum-art-museum-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
-- name: castle-wall-DSC-0067-aqua.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-aqua.JPG
-- name: fence-fence-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crunch-paper.jpg
-- name: containership-containership-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-graham-sutherland.jpg
-- name: nazi-invasion-IMG_8353.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8353.jpg
-- name: old-door-lock-old-door-lock-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
-- name: soldier-kneeling-26307870940-76a7c658cd-k.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26307870940-76a7c658cd-k.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-light-dali.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-4.jpg
-- name: bluelake-clean-view-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
-- name: rain-princess-P9180036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P9180036.jpg
-- name: stories-new-van-gogh-starry-night-container-bridge-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-van-gogh-starry-night-container-bridge-2.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
-- name: stories-new-dragon-shadows-black-white-outline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-dragon-shadows-black-white-outline.jpg
-- name: ellis-island-ellis-island-room-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gred-mash.jpg
-- name: ellis-island-ellis-island-room-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-umberto-bocc.jpg
-- name: amusement-park-amusement-park-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
-- name: fence-fence-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-aqua.jpg
-- name: copper-circuit-IMG_7072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7072.jpg
-- name: old-church-oldchurch-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-dali.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colorful-dream.jpg
-- name: paris-paris-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-bright-sand.jpg
-- name: amusement-park-amusement-park-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-- name: white-house-lawn-white-house-window-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kandinsky-bv.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: walled-garden-walled-garden-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
-- name: meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
-- name: walled-garden-walled-garden-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-color.jpg
-- name: aws-s3-lighthouse-lighthouse-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-1200.jpg
-- name: nyc-flag-nycflag-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-atari-asteroids.jpg
-- name: trucksilo-trucksilo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-post-modern.jpg
-- name: dc-statue-dcstatue-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
-- name: oldhouse-oldhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-smoking-cigarette.jpg
-- name: windowmountain-window-mountain-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crabapple.jpg
-- name: razorwire-DSC-0080-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-satan-red.jpg
-- name: abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
-- name: cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-- name: death-valley-death-valley-national-park-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-purple-storm.jpg
-- name: mistywoods-babyfoot-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gan-vogh.jpg
-- name: oldtrain-oldtrain-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-cinnamon-rolls.jpg
-- name: border-crossing-bordercrossing-internet-numbers.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-internet-numbers.png
-- name: walled-garden-walled-garden-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-wols.jpg
+- name: store-on-corner-oldcabin-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-granite.jpg
+- name: power-lines-power-lines-empty-space-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kandinsky-bv.jpg
+- name: dc-statue-dcstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-plentiful.jpg
+- name: beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+- name: dc-statue-dcstatue-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-diego-rivera1.jpg
+- name: art-museum-art-museum-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-horiz-circuit.jpg
+- name: walled-garden-walled-garden-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
+- name: art-museum-art-museum-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dry-skin.jpg
+- name: oldroad-old-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-asteroids.jpg
+- name: old-door-lock-old-door-lock-2-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colored-circuits.jpg
+- name: white-house-lawn-white-house-lawn-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dry-skin.jpg
+- name: mistywoods-babyfoot-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-matrix.jpg
+- name: gypsy-wagon-gypsywagon-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gred-mash.jpg
+- name: berlinwall-DSC-0084-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
+- name: bordercrossing-bordercrossing-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-kandinsky-bv.jpg
+- name: death-valley-death-valley-national-park-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gan-vogh.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-smoking-cigarette.jpg
+- name: border-crossing-bordercrossing-nazi-poster.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-nazi-poster.png
+- name: stories-old-barn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-barn.jpg
+- name: old-door-lock-old-door-lock-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2.jpg
+- name: birdhouse-birdhouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-constitution.jpg
+- name: aws-s3-square-C32Eg8bUEAEa-gj.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj.jpg
+- name: power-lines-power-lines-empty-space-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-free-woman.jpg
+- name: losangelescloudyday-los-angeles-downtown-close-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-close-up.jpg
+- name: amusement-park-amusement-park-2-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
+- name: locked-up-steam-lock-up-steam-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-aqua.jpg
+- name: bluelake-colorful-blocks-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-01-17-38.jpg
+- name: power-lines-power-lines-empty-space-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alberto-giacometti.jpg
+- name: docks-docks-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-clean-view.jpg
+- name: liberty-back-statue-liberty-back-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-creativity.jpg
+- name: legal-statue-legalstatue-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-aqua.jpg
+- name: abandonedbuildings_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purple_pond.jpg
+- name: mosaic-face-mosaic-face-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-feed-people.jpg
+- name: stories-new-path-in-the-woods-black-white.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-path-in-the-woods-black-white.jpg
+- name: oldhotel-oldhotel-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-three.jpg
+- name: powerlines-power-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purp-paper.jpg
 - name: downtown-los-angeles-downtown-la-attack-planes.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-attack-planes.JPG
-- name: white-house-lawn-white-house-lawn-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-color.jpg
-- name: old-granary-field-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
-- name: crow_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dry_skin.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
+- name: flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
+- name: server-cloud-server-racks-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-spagetti-accident.jpg
+- name: aws-s3-stories-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
+- name: locked-up-steam-lock-up-steam-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smoking-cigarette.jpg
+- name: miamibeach-miamibeach-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-creativity.jpg
+- name: oldsmallboat-oldsmallboat-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-neo-instinct.jpg
+- name: mistywoods-babyfoot-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gan-vogh.jpg
+- name: mosaic-face-mosaic-face-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-granite.jpg
+- name: cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+- name: crow-crow-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
 ---
 'Robot Umpires' Debut In Independent Atlantic League.&nbsp;Tips To Build Good Credit During And After College.&nbsp;Fishing Team Advances To National Tournament.&nbsp;Turbulence Forces Air Canada Flight To Land In Hawaii.&nbsp;Environment Challenge Celebrates Local Projects.&nbsp;How Are Hurricanes Named?.&nbsp;WSUs Thompson Taken In Supplemental Draft.&nbsp;Tax Appeal Could Cost Sentinel Schools.&nbsp;
